# onnxops

./: .gitignore  CMakeLists.txt  MANIFEST.in  requirements.txt  run.sh  setup.py  test_MAobserver.py  test_histobserver.py  test_observer.py
cmake/: PrepareONNX.cmake  PreparePyBind11.cmake
python/: CMakeLists.txt  bindings.cpp
python/my_quant_lib/: __init__.py
src/: CMakeLists.txt  custom_op_library.cpp  custom_op_onnx.cpp  histogram_kernel.cu  histogram_kernel.cuh  min_max_kernel.cu  min_max_kernel.h  moving_avg_min_max.h  observer.cpp  observer.cu  observer.h  observer_kernel.cu  observer_kernel.cuh  python_bindings.cpp  state_manager.cpp  state_manager.h
test/: test_observer.py
tests/: test_observer.py
